fix: deprecated URL